unpackaged/main/default/objects/Forecast_Role_Map__c/Forecast_Role_Map__c.object-meta.xml
<CustomObject>
    <label>Forecast Role Map</label>
    <nameField>
        <label>Forecast Role Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Role Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>