unpackaged/main/default/objects/Forecast_Role_Map__c/fields/Generation_Index__c.field-meta.xml
<CustomField>
    <fullName>Generation_Index__c</fullName>
    <label>Generation Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>