unpackaged/main/default/objects/Forecast_Role_Map__c/fields/Is_Effective_Now__c.field-meta.xml
<CustomField>
    <fullName>Is_Effective_Now__c</fullName>
    <formula>Start_Date__c &lt;= today() &amp;&amp; End_Date__c &gt;= today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Effective Now?</label>
    <type>Checkbox</type>
</CustomField>