unpackaged/main/default/objects/Forecast_Role_Map__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User Role</label>
    <referenceTo>ROE_Rule__c</referenceTo>
    <relationshipLabel>Forecast Role Maps</relationshipLabel>
    <relationshipName>Forecast_Role_Maps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>