unpackaged/main/default/objects/Forecast_Role_Map__c/fields/User_Role_Is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Is_Inactive__c</fullName>
    <formula>NOT(ISPICKVAL(User_Role__r.Status__c,&quot;Active&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role: Is Inactive?</label>
    <type>Checkbox</type>
</CustomField>