unpackaged/main/default/objects/Forecast_Role_Map__c/fields/User_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Name__c</fullName>
    <formula>User_Role__r.User_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role: Name</label>
    <type>Text</type>
</CustomField>