unpackaged/main/default/objects/Forecast_Role_Map__c/validationRules/End_date_last_of_month.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_last_of_month</fullName>
    <active>true</active>
    <errorConditionFormula>DAY(End_Date__c + 1) != 1</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date must be on the last date of a month</errorMessage>
</ValidationRule>