unpackaged/main/default/objects/Forecast_Role_Map__c/validationRules/Start_date_befor_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_befor_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;= End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date must precede end date</errorMessage>
</ValidationRule>