unpackaged/main/default/objects/Forecast_Role_Map__c/validationRules/Start_Date_First_of_month.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_First_of_month</fullName>
    <active>true</active>
    <errorConditionFormula>DAY(Start_Date__c) != 1</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date must be on the first of a month</errorMessage>
</ValidationRule>