unpackaged/main/default/objects/Forecast_Role_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>User_Role__c</columns>
    <columns>Mapped_User_Role__c</columns>
    <columns>User_Role_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>